--- a/css/lighthouse.css
+++ b/css/lighthouse.css
@@ -7,12 +7,12 @@ body { background-color: #00005D;
 	background-color: #B3C7E6;
 	color: #000066; }
 header { background-color: #869DC7;
-	color: #000000;
-	font-size: 20pt;
+	color: #00005D;
+	font-size: 150%;
 	padding: 10px 10px 10px 155px;
 	background-repeat: no-repeat;
 	background-image: url(lightlogo.jpg); }
-	header a { text-decoration: none; }
+header a { text-decoration: none; }
 header a:link { color: #00005D; }
 header a:visited { color: #00005D;}
 header a:hover { color: #FFFFFF; }
@@ -22,10 +22,9 @@ nav { float: right;
 	letter-spacing: 0.1em; }
 main { background-color: #ffffff;
 	color: #000000;
-	padding: 10px 20px; 
+	padding: 10px 20px;
 	display: block;
-	overflow: auto; 
-	font-family: "Times New Roman", serif; font-size: 12pt; }
+	overflow: auto; }
 footer { font-size: 70%;
 	text-align: center;
 	padding: 10px;
@@ -41,12 +40,11 @@ nav a { text-decoration: none;
 	display: block;
 	background-color: #B3C7E6;
 	border-bottom: 1px solid #FFFFFF;
-	background-image: url(sprites.gif);
+	background-image: url(./images/sprites.gif);
 	background-repeat: no-repeat;
 	background-position: right 0; 	}
 nav a:link { color: #FFFFFF; }
 nav a:visited { color: #EAEAEA; }
 nav a:hover { color: #869DC7;
 	background-color: #EAEAEA;
-    background-position: right -100px; }	
-nav { display: none; }
+    background-position: right -100px; }
